# Edifym

./: .gitignore  BenchmarkConfig.py  CommandHelper.py  JsonHelper.py  LICENSE  MainConfig.py  Simulation.py  benchmarks.json  collect_incorrect_stats.py  collect_stats.py  collect_stats_mpi.py  collect_stats_single.py  config.json  find_bcet_per_task.py  find_highest_wcet_per_task.py  find_stats.py  find_wcet_per_task.py  lowest_mtime.py  main.py  main_mpi.py  main_validate_wcet.py  main_wcet_per_task.py  requirements.txt
EdifymRunner/: CMakeLists.txt  executable_task.h  main.c  main_static.c  main_static_without_function_pointer.c
Tasks/: CompileSingleSimulationTask.py  GenerateCompilableSimulationsTask.py  GenerateRunSimulationsTask.py  GenerateThreadsAndValueSimulationsTask.py  GenerateThreadsSimulationsMpiTask.py  GenerateThreadsSimulationsTask.py  GenerateValueSimulationsTask.py  GenerateWcetPerTaskSimulationsTask.py  GetRunArgsToValidateTask.py  ITask.py  RunSingleSimulationTask.py  ValidateSingleSimulationTask.py
